--- a/posts/sample-size-app/powerAnalysis.qmd
+++ b/posts/sample-size-app/powerAnalysis.qmd
@@ -59,6 +59,87 @@ $$
 
 As it turns out, upon further questioning, the requester told me that the test was only going to run for a **maximum** of $30$ days. There wasn't any way for results to be statistically verifiable. Instead of lying to her, I was upfront and told her that she wasn't going to get what she wanted in just $30$ days, which paid off for me in the end. She understood what I said after just a little more convincing, and the sandbox went off without any problems.
 
+## Purpose of Power Analysis
+
+When designing experiments, a key question to keep in mind is:
+
+`How many animals/subjects do I need for my experiment?`
+
+To small of a sample size can under detect the effect of interest; too large of a sample size, and you be lead to wasting unnecessary resources.
+
+::: {.callout-important collaps="true"}
+## Goal
+
+We want to have enough samples to reasonably detect an effect if it really is there without wasting limited resources on too many samples.
+:::
+
+Effect size
+
+:   The magnitude of the effect under the alternative hypothesis
+
+    The larger the effect, the easier it is to detect and thus requires fewer samples
+
+Power
+
+:   The probability of correctly rejecting the null hypothesis if it is false
+
+    Power is equal to $1-\beta$ where $\beta$ is the probability of a Type II error (FN)
+
+    Higher power allows for a better chance of detecting a true effect, if it exists
+
+    A standard power is equal to $0.80$
+
+Significance level ($\alpha$)
+
+:   The probability of falsely rejecting the null hypothesis even though it is true
+
+    The lower the significance level, the more likely you are to avoid a false positive and the more samples are needed
+
+    A standard significance level is equal to $0.05$
+
+## Effect Sizes
+
+The effect size in a power analysis is dependent on the sample data at hand.
+
+### How to estimate the effect size (Options)
+
+1.  Use background information to get means and variation, then calculate the effect size directly
+2.  Use background information from similar studies to get means and variation, then calculate the effect size directly
+3.  With no prior information, make an estimated guess on the effect size expected
+
+$$
+Effect Size = \frac {\mu_{1} - \mu_{2}}{\sigma}
+$$
+
+## Table of Tests and Functions
+
+| ID  | Name of Test               | In R?   | Package     | Function             |
+|-------------|--------------------|-------------|-------------|---------------|
+| 1   | One Mean t-test            | Yes     | pwr         | pwr.t.test           |
+| 2   | Two Means t-test           | Yes     | pwr         | pwr.t.test           |
+| 3   | Paired t-test              | Yes     | pwr         | pwr.t.test           |
+| 4   | One-way ANOVA              | Yes     | pwr         | pwr.anova.test       |
+| 5   | Single proportion test     | Yes     | pwr         | pwr.p.test           |
+| 6   | Two proportions test       | Yes     | pwr         | pwr.2p.test          |
+| 7   | Chi-squared test           | Yes     | pwr         | pwr.chisq.test       |
+| 8   | Simple Linear Regression   | Yes     | pwr         | pwr.f2.test          |
+| 9   | Multiple Linear Regression | Yes     | pwr         | pwr.f2.test          |
+| 10  | Correlation                | Yes     | pwr         | pwr.r.test           |
+| 11  | One Mean Wilcoxon Test     | Yes\*   | pwr         | pwr.t.test + 15%     |
+| 12  | Mann-Whitney Test          | Yes\*   | pwr         | pwr.t.test + 15%     |
+| 13  | Paired Wilcoxon Test       | Yes\*   | pwr         | pwr.t.test + 15%     |
+| 14  | Kruskal-Wallace Test       | Yes\*   | pwr         | pwr.anova.test + 15% |
+| 15  | Repeated Measures ANOVA    | Yes     | WebPower    | wp.rmanova           |
+| 16  | Multi-way ANOVA            | Yes     | WebPower    | wp.kanova            |
+| 17  | Multi-way ANOVA            | Yes     | WebPower    | wp.kanova            |
+| 18  | Logistic Regression        | Yes     | WebPower    | wp.logistic          |
+| 19  | Poisson Regression         | Yes     | WebPower    | wp.poisson           |
+| 20  | Multilevel Modelling: CRT  | Yes     | WebPower    | wp.crt2arm           |
+| 21  | Multilevel Modelling: MRT  | Yes     | WebPower    | wp.mrt2arm           |
+| 22  | GLMM                       | Yes\*\* | Simr & lme4 |                      |
+
+: Table of Statistical Tests and R Functions
+
 ### Sources
 
 [Shiny - Using custom CSS in your app](https://shiny.rstudio.com/articles/css.html)
